--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,9 @@
 @import url(./blocks/header/__image/header__image.css);
 @import url(./blocks/content/content.css);
 @import url(./blocks/content/__about/content__about.css);
-@import url(./blocks/content/__about/_description/content__about_description.css);
-@import url(./blocks/content/__about/_navigation/content__about_navigation.css);
-@import url(./blocks/content/__about/content__about-information.css);
+@import url(./blocks/content/__about/_title/content__about_title.css);
+@import url(./blocks/button/button.css);
+@import url(./blocks/button/button-information.css);
 @import url(./blocks/information/information.css);
 @import url(./blocks/title/title.css);
 @import url(./blocks/information/__title/information__title.css);
@@ -17,3 +17,15 @@
 @import url(./blocks/information/__greenLine/information__greenLine.css);
 @import url(./blocks/information/__grayLine/information__grayLine-subtitle.css);
 @import url(./blocks/information/__greenLine/information__greenLine-subtitle.css);
+@import url(./blocks/technology/technology.css);
+@import url(./blocks/technology/__block/technology__block.css);
+@import url(./blocks/technology/technology__block-information.css);
+@import url(./blocks/technology/__block/_title/technology__block_title.css);
+@import url(./blocks/technology/__block/_subtitle/technology__block_subtitle.css);
+@import url(./blocks/portfolio/portfolio.css);
+@import url(./blocks/portfolio/__block/portfolio__block.css);
+@import url(./blocks//portfolio/__block/_title/portfolio__block_title.css);
+@import url(./blocks//portfolio/__block/_subtitle/portfolio__block_subtitle.css);
+@import url(./blocks/portfolio/__block/_quote/portfolio__block_quote.css);
+@import url(./blocks/github/github.css);
+@import url(./blocks/portfolio/__block/_image/portfolio__block_image.css);
