--- a/src/blocks/portfolio/__block/_title/portfolio__block_title.css
+++ b/src/blocks/portfolio/__block/_title/portfolio__block_title.css
@@ -1,11 +1,10 @@
-.content__about_description {
-    text-align: center;
+.portfolio__block_title{
     font-family: Inter;
     font-size: 50px;
     font-style: normal;
     font-weight: 400;
     line-height: 58px; /* 116% */
     letter-spacing: -2px;
-    max-width: 730px;
-    margin: 160px auto 0 auto;
+    margin: 66px 0 16px 0;
+    max-width: 600px;
 }
