--- a/src/blocks/portfolio/__block/_title/portfolio__block_title.css
+++ b/src/blocks/portfolio/__block/_title/portfolio__block_title.css
@@ -8,3 +8,15 @@
     margin: 66px 0 16px 0;
     max-width: 600px;
 }
+
+p.portfolio__block_title {
+    color: #8B8B8B;
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: normal;
+    margin: 100px 0 50px 0;
+}
