--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,35 @@
 @import url(./blocks/footer/__block/_github/footer__block_github.css);
 @import url(./blocks/footer/__block/_yandex/footer__block_yandex.css);
 @import url(./blocks/footer/__block/_year/footer__block_year.css);
+@import url(./blocks/form/form.css);
+@import url(./blocks/form/__input/form__input.css);
+@import url(./blocks/form/__button/form__button.css);
+@import url(./blocks/slider/slider.css);
+@import url(./blocks/round/round.css);
+@import url(./blocks/switch/switch.css);
+@import url(./blocks/search-form/__subtitle/search-form__subtitle.css);
+@import url(./blocks/search-form/search-form.css);
+@import url(./blocks/filter/filter.css);
+@import url(./blocks/border/border.css);
+@import url(./blocks/movies/movies.css);
+@import url(./blocks/movies/__card/movies__card.css);
+@import url(./blocks/movies/__card/_image/movies__card_image.css);
+@import url(./blocks/movies/__card/_subtitle/movies__card_subtitle.css);
+@import url(./blocks/movies/__card/_title/movies__card_title.css);
+@import url(./blocks/movies/__card/_button/movies__card_button.css);
+@import url(./blocks/movies/__card/movies__card-background.css);
+@import url(./blocks/movies-add/movies-add.css);
+@import url(./blocks/movies-add/__button/movies-add__button.css);
+@import url(./blocks/loader/loader.css);
+@import url(./blocks/movies/__card/_button/movies__card_button-delete.css);
+@import url(./blocks/header/__button/header__button-movies.css);
+@import url(./blocks/header/__button/header__button-profile.css);
+@import url(./blocks/profile/proflie.css);
+@import url(./blocks/profile/__title/profile__title.css);
+@import url(./blocks/profile//__form/profile__form.css);
+@import url(./blocks/profile/__form/_input/profile__form_input-email.css);
+@import url(./blocks/profile/__form/_input/profile__form_input-name.css);
+@import url(./blocks/profile/__form/_subtitle/profile__form_subtitle.css);
+@import url(./blocks/profile/__form/_title/profile__form_title.css);
+@import url(./blocks/profile/__button/profile__button-edit.css);
+@import url(./blocks/profile/__button/profile__button-exit.css);
