--- a/src/blocks/button/button-information.css
+++ b/src/blocks/button/button-information.css
@@ -2,6 +2,11 @@
     display: flex;
     justify-content: center;
     margin: 150px 0 30px 0;
+    transition: opacity .2s linear;
+}
+
+.button-information:hover{
+    opacity: 0.8;
 }
 
 .technology__block-information > .button-information{
