--- a/src/blocks/header/__button/header__button.css
+++ b/src/blocks/header/__button/header__button.css
@@ -9,6 +9,11 @@
     border: none;
     cursor: pointer;
     padding: 0 30px 0 0;
+    transition: opacity .2s linear;
+}
+
+.header__button:hover{
+    opacity: 0.8;
 }
 
 .header__button:last-child{
