--- a/src/blocks/portfolio/__block/_url/portfolio__block_url-image.css
+++ b/src/blocks/portfolio/__block/_url/portfolio__block_url-image.css
@@ -3,4 +3,9 @@
     position: absolute;
     padding-top: 15px;
     cursor: pointer;
+    transition: opacity .2s linear;
+}
+
+.portfolio__block_url-image:hover{
+    opacity: 0.8;
 }
