finished 100% adaptive page

--- a/src/blocks/error/__button/error__button.css
+++ b/src/blocks/error/__button/error__button.css
@@ -24,3 +24,12 @@
     }
     
 }
+
+@media screen and (max-width: 1023px) {
+    .error__button{
+        font-size: 12px;
+        margin-top: 284px;
+        margin-bottom: 30px;
+    }
+    
+}
