--- a/src/blocks/footer/__block/footer__block.css
+++ b/src/blocks/footer/__block/footer__block.css
@@ -6,9 +6,7 @@
 
 @media screen and (max-width: 767px) {
     .footer__block{
-        height: calc(253px - 115px);
-        justify-content: center;
-        align-items: flex-end;
+        flex-direction: column-reverse;
     }
     
 }
