--- a/src/blocks/movies/__card-button/movies__card-button.css
+++ b/src/blocks/movies/__card-button/movies__card-button.css
@@ -24,3 +24,12 @@
     visibility: visible;
     opacity: 0.8;
 }
+
+@media screen and (max-width: 767px) {
+    .movies__card-button{
+        top: 10px;
+        right: 10px;
+
+    }
+    
+}
