--- a/src/blocks/movies/movies.css
+++ b/src/blocks/movies/movies.css
@@ -1,6 +1,6 @@
 .movies{
     max-width: 1140px;
-    margin: 70px auto 0 auto;
+    margin: 70px auto 240px auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(auto-fill, 1fr);
@@ -15,6 +15,19 @@
         grid-template-rows: repeat(auto-fill, 1fr);
         row-gap: 47px;
         column-gap: 30px;
+        margin-bottom: 175px;
+
+    }
+    
+}
+
+@media screen and (max-width: 767px) {
+    .movies{
+        max-width: 300px;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(auto-fill, 1fr);
+        row-gap: 36px;
+        column-gap: 0;
 
     }
     
