--- a/src/blocks/popup/__movies-button/popup__movies-button.css
+++ b/src/blocks/popup/__movies-button/popup__movies-button.css
@@ -27,6 +27,11 @@
     margin-bottom: 0;
 }
 
-.popup__movies-button:hover{
-    opacity: 0.8;
+
+@media screen and (max-width: 767px) {
+    .popup__movies-button{
+        margin-top: 144px;
+        margin-bottom: 20px;
+    }
+    
 }
