--- a/src/blocks/popup/__profile-button/popup__profile-button.css
+++ b/src/blocks/popup/__profile-button/popup__profile-button.css
@@ -25,3 +25,11 @@
 .popup__profile-button:hover{
     opacity: 0.8;
 }
+
+@media screen and (max-width: 767px) {
+    .popup__profile-button{
+        bottom: 46px;
+        left: 110px;
+    }
+    
+}
