--- a/src/blocks/register/__form/register__form.css
+++ b/src/blocks/register/__form/register__form.css
@@ -4,3 +4,9 @@
     display: flex;
     flex-direction: column;
 }
+
+@media screen and (max-width: 767px) {
+    .register__form{
+        width: 260px;
+    }
+}
