--- a/src/blocks/error/__subtitle/error__subtitle.css
+++ b/src/blocks/error/__subtitle/error__subtitle.css
@@ -9,8 +9,9 @@
     line-height: normal;
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 767px) {
     .error__subtitle{
+        font-size: 12px;
     }
     
 }
