--- a/src/blocks/filter/filter.css
+++ b/src/blocks/filter/filter.css
@@ -1,12 +1,20 @@
 .filter{
     display: flex;
     justify-content: center;
+    align-items: center;
     margin-top: 28px;
 }
 
 @media screen and (max-width: 1023px) {
     .filter{
         margin-top: 40px;
+    }
+    
+}
+
+@media screen and (max-width: 767px) {
+    .filter{
+        margin-top: 47px;
     }
     
 }
