--- a/src/blocks/footer/__block-year/footer__block-year.css
+++ b/src/blocks/footer/__block-year/footer__block-year.css
@@ -10,6 +10,10 @@
 
 @media screen and (max-width: 767px) {
     .footer__block-year{
+        text-align: center;
+        margin-top: 30px;
+        font-size: 12px;
+        color: #8B8B8B;
     }
     
 }
