--- a/src/blocks/footer/__title/footer__title.css
+++ b/src/blocks/footer/__title/footer__title.css
@@ -7,16 +7,15 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    padding-bottom: 20px;
     border-bottom: 1px solid #424242;
-    margin: 79px 0 0 0;
+    padding: 79px 0 20px 0;
+    margin: 0;
 }
 
 @media screen and (max-width: 767px) {
     .footer__title{
         font-size: 12px;
         margin: 0;
-        padding-top: 79px;
     }
     
 }
