--- a/src/blocks/header/__button-menu/header__button-menu.css
+++ b/src/blocks/header/__button-menu/header__button-menu.css
@@ -21,3 +21,11 @@
     }
     
 }
+
+@media screen and (max-width: 767px) {
+    .header__button-menu{
+        width: 40px;
+        height: 43px;
+        margin-right: 14px;
+    }
+}
