--- a/src/blocks/header/__image/header__image.css
+++ b/src/blocks/header/__image/header__image.css
@@ -26,4 +26,8 @@
         top: 18px;
         left: 14px;
     }
+    .register .header__image{
+        position: unset;
+        margin-top: 56px;
+    }
 }
