--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -26,4 +26,11 @@
     .header{
         max-width: 320px;
     }
+
+    .register.header{
+        height: 253px;
+        max-width: 320px;
+        flex-direction: column;
+        justify-content: center;
+    }
 }
