--- a/src/blocks/movies/__card-button/_ok/movies__card-button_ok.css
+++ b/src/blocks/movies/__card-button/_ok/movies__card-button_ok.css
@@ -1,4 +1,4 @@
-.movies__card-button_delete{
+.movies__card-button_ok{
     position: absolute;
     top: 14px;
     right: 14px;
@@ -7,13 +7,8 @@
     transition: opacity .2s linear;
 }
 
-.saved .movies__card-button_delete:hover{
-    visibility: visible;
-    opacity: 0.8;
-}
-
 @media screen and (max-width: 767px) {
-    .movies__card-button_delete{
+    .movies__card-button_ok{
         top: 10px;
         right: 10px;
 
