--- a/src/blocks/movies/__card-title/movies__card-title.css
+++ b/src/blocks/movies/__card-title/movies__card-title.css
@@ -17,3 +17,11 @@
     }
     
 }
+
+@media screen and (max-width: 767px) {
+    .movies__card-title{
+        font-size: 12px;
+        width: 240px;
+    }
+    
+}
