--- a/src/blocks/popup/__close-button/popup__close-button.css
+++ b/src/blocks/popup/__close-button/popup__close-button.css
@@ -9,4 +9,17 @@
     background-image: url(../../../images/close.svg);
     background-size: cover;
     padding: 0;
+    transition: opacity .2s linear;
+}
+
+.popup__close-button:hover{
+    opacity: 0.8;
+}
+
+@media screen and (max-width: 767px) {
+    .popup__close-button{
+        top: 13px;
+        right: 13px;
+    }
+    
 }
