--- a/src/blocks/popup/__content/popup__content.css
+++ b/src/blocks/popup/__content/popup__content.css
@@ -7,3 +7,11 @@
     align-items: center;
     flex-direction: column;
 }
+
+@media screen and (max-width: 767px) {
+    .popup__content{
+        width: 320px;
+        height: 780px;
+    }
+    
+}
