--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -2,8 +2,8 @@
     width: 100%;
     height: 100%;
     display: flex;
-    visibility: hidden;
-    opacity: 0;
+    visibility: visible;
+    opacity: 1;
     z-index: 1;
     transition: visibility 0.5s, opacity 0.5s linear;
     justify-content: flex-end;
@@ -12,4 +12,12 @@
     top: 0;
     right: 0;
     bottom: 0;
+    left: 0;
+}
+
+@media screen and (max-width: 767px) {
+    .popup{
+        justify-content: center;
+    }
+    
 }
