--- a/src/blocks/profile/__button-edit/profile__button-edit.css
+++ b/src/blocks/profile/__button-edit/profile__button-edit.css
@@ -22,6 +22,14 @@
 @media screen and (max-width: 1023px) {
     .profile__button-edit{
         margin-top: 210px;
+        width: 260px;
+    }
+    
+}
+
+@media screen and (max-width: 1023px) {
+    .profile__button-edit{
+        margin-top: 379px;
     }
     
 }
