--- a/src/blocks/profile/__button-exit/profile__button-exit.css
+++ b/src/blocks/profile/__button-exit/profile__button-exit.css
@@ -27,3 +27,12 @@
     }
     
 }
+
+@media screen and (max-width: 767px) {
+    .profile__button-exit{
+        margin-bottom: 40px;
+        width: 260px;
+
+    }
+    
+}
