--- a/src/blocks/profile/__title/profile__title.css
+++ b/src/blocks/profile/__title/profile__title.css
@@ -17,3 +17,11 @@
     }
     
 }
+
+@media screen and (max-width: 767px) {
+    .profile__title{
+        margin-top: 70px;
+        margin-bottom: 80px;
+    }
+    
+}
