--- a/src/blocks/register/__form-input/register__form-input.css
+++ b/src/blocks/register/__form-input/register__form-input.css
@@ -9,4 +9,14 @@
   padding: 0;
   margin-bottom: 20px;
   color: white;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+@media screen and (max-width: 767px) {
+  .register__form-input{
+      width: 260px;
+  }
 }
