--- a/src/blocks/round/round.css
+++ b/src/blocks/round/round.css
@@ -7,7 +7,8 @@
   }
 
   @media screen and (max-width: 1023px) {
-    .slider.slider.round{
+    .slider.round{
+      align-items: center;
     }
     
 }
