--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -2,8 +2,8 @@
     width: 100%;
     height: 100%;
     display: flex;
-    visibility: visible;
-    opacity: 1;
+    visibility: hidden;
+    opacity: 0;
     z-index: 1;
     transition: visibility 0.5s, opacity 0.5s linear;
     justify-content: flex-end;
