--- a/src/index.css
+++ b/src/index.css
@@ -92,5 +92,6 @@
 @import url(./blocks/popup/__movies-button/_active/popup__movies-button_active.css);
 @import url(./blocks/popup/_active/popup_active.css);
 @import url(./blocks/movies/__card-button/_ok/movies__card-button_ok.css);
+@import url(./blocks/header/__button-movies/_active/header__button-movies_active.css);
 
 
