--- a/src/blocks/header/__button/header__button.css
+++ b/src/blocks/header/__button/header__button.css
@@ -1,48 +1,51 @@
 .header__button {
-    font-family: Inter;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 16px;
-    color: white;
-    background: none;
-    border: none;
-    cursor: pointer;
-    padding: 0 30px 0 0;
-    transition: opacity .2s linear;
+  font-family: Inter;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
+  color: white;
+  background: none;
+  border: none;
+  text-decoration: none;
+  cursor: pointer;
+  padding: 0 30px 0 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: opacity 0.2s linear;
 }
 
-.header__button:hover{
-    opacity: 0.8;
+.header__button:hover {
+  opacity: 0.8;
 }
 
-.header__button:last-child{
-    color: black;
-    padding: 0;
-    border-radius: 3px;
-    background: #3DDC84;
-    width: 76px;
-    height: 32px;
-    flex-shrink: 0;
-    border: 1px solid #3DDC84;
-    margin-right: 70px;
+.header__button:last-child {
+  color: black;
+  padding: 0;
+  border-radius: 3px;
+  background: #3ddc84;
+  width: 76px;
+  height: 32px;
+  flex-shrink: 0;
+  border: 1px solid #3ddc84;
+  margin-right: 70px;
 }
 
 @media screen and (max-width: 1023px) {
-    .header__button:last-child{
-        margin-right: 30px;
-    }
-    
+  .header__button:last-child {
+    margin-right: 30px;
+  }
 }
 
 @media screen and (max-width: 767px) {
-    .header__button{
-        font-size: 10px;
-        padding-right: 14px;
-    }
-    .header__button:last-child{
-        width: 54px;
-        height: 26px;
-        margin-right: 14px;
-    }
+  .header__button {
+    font-size: 10px;
+    padding-right: 14px;
+  }
+  .header__button:last-child {
+    width: 54px;
+    height: 26px;
+    margin-right: 14px;
+  }
 }
