--- a/src/blocks/header/__title/header__title.css
+++ b/src/blocks/header/__title/header__title.css
@@ -1,30 +1,26 @@
-.header__title{
-    color: #FFF;
-    font-family: Inter;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    margin: 148px auto 40px auto;
-    width: 396px;
-    text-align: left;
+.header__title {
+  color: #fff;
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  margin: 148px auto 40px auto;
+  width: 396px;
+  text-align: left;
 }
 
 @media screen and (max-width: 1023px) {
-    .header__title{
-        margin-top: 310px;
-    }
-    
-    
+  .header__title {
+    margin-top: 310px;
+  }
 }
 
 @media screen and (max-width: 767px) {
-    .register .header__title{
-        margin-top: 50px;
-        text-align: center;
-        margin-bottom: 80px;
-        max-width: 260px;
-    }
-    
-    
+  .register .header__title {
+    margin-top: 50px;
+    text-align: center;
+    margin-bottom: 80px;
+    max-width: 260px;
+  }
 }
