--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -1,4 +1,9 @@
 .popup {
+  display: none;
+}
+
+@media screen and (max-width: 1023px) {
+  .popup {
     width: 100%;
     height: 100%;
     display: flex;
@@ -13,11 +18,11 @@
     right: 0;
     bottom: 0;
     left: 0;
+  }
 }
 
 @media screen and (max-width: 767px) {
-    .popup{
-        justify-content: center;
-    }
-    
+  .popup {
+    justify-content: center;
+  }
 }
