--- a/src/blocks/popup/__content/popup__content.css
+++ b/src/blocks/popup/__content/popup__content.css
@@ -1,6 +1,6 @@
 .popup__content{
     width: 520px;
-    height: 1024px;
+    height: 100%;
     background: #202020;
     position: relative;
     display: flex;
@@ -11,7 +11,7 @@
 @media screen and (max-width: 767px) {
     .popup__content{
         width: 320px;
-        height: 780px;
+        height: 100%;
     }
     
 }
