--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,12 @@
 @import url(./blocks/header/__button/header__button.css);
 @import url(./blocks/header/__image/header__image.css);
 @import url(./blocks/header/__title/header__title.css);
-@import url(./blocks/header/__button-movies/header__button-movies.css);
-@import url(./blocks/header/__button-profile/header__button-profile.css);
-@import url(./blocks/header/__button-menu/header__button-menu.css);
+@import url(./blocks/header/__movies-button/header__movies-button.css);
+@import url(./blocks/header/__profile-button/header__profile-button.css);
+@import url(./blocks/header/__menu-button/header__menu-button.css);
 @import url(./blocks/content/content.css);
 @import url(./blocks/content/__about/content__about.css);
-@import url(./blocks/content/__about-title/content__about-title.css);
+@import url(./blocks/content/__title-about/content__title-about.css);
 @import url(./blocks/button/button.css);
 @import url(./blocks/button-information/button-information.css);
 @import url(./blocks/information/information.css);
@@ -19,8 +19,8 @@
 @import url(./blocks/information/__subtitle/information__subtitle.css);
 @import url(./blocks/information/__grayLine/information__grayLine.css);
 @import url(./blocks/information/__greenLine/information__greenLine.css);
-@import url(./blocks/information/__grayLine-subtitle/information__grayLine-subtitle.css);
-@import url(./blocks/information/__greenLine-subtitle/information__greenLine-subtitle.css);
+@import url(./blocks/information/__subtitle-grayLine/information__subtitle-grayLine.css);
+@import url(./blocks/information/__subtitle-greenLine/information__subtitle-greenLine.css);
 @import url(./blocks/technology/technology.css);
 @import url(./blocks/technology/__block/technology__block.css);
 @import url(./blocks/technology/__subtitle/technology__subtitle.css);
@@ -28,19 +28,19 @@
 @import url(./blocks/technology/__information/technology__information.css);
 @import url(./blocks/portfolio/portfolio.css);
 @import url(./blocks/portfolio/__block/portfolio__block.css);
-@import url(./blocks/portfolio/__block-title/portfolio__block-title.css);
-@import url(./blocks/portfolio/__block-subtitle/portfolio__block-subtitle.css);
-@import url(./blocks/portfolio/__block-quote/portfolio__block-quote.css);
-@import url(./blocks/portfolio/__block-github/portfolio__block-github.css);
-@import url(./blocks/portfolio/__block-image/portfolio__block-image.css);
-@import url(./blocks/portfolio/__url-image/portfolio__url-image.css);
+@import url(./blocks/portfolio/__title-block/portfolio__title-block.css);
+@import url(./blocks/portfolio/__subtitle-block/portfolio__subtitle-block.css);
+@import url(./blocks/portfolio/__quote-block/portfolio__quote-block.css);
+@import url(./blocks/portfolio/__github-block/portfolio__github-block.css);
+@import url(./blocks/portfolio/__image-block/portfolio__image-block.css);
+@import url(./blocks/portfolio/__image-url/portfolio__image-url.css);
 @import url(./blocks/portfolio/__url/portfolio__url.css);
 @import url(./blocks/footer/footer.css);
 @import url(./blocks/footer/__block/footer__block.css);
 @import url(./blocks/footer/__title/footer__title.css);
-@import url(./blocks/footer/__block-github/footer__block-github.css);
-@import url(./blocks/footer/__block-yandex/footer__block-yandex.css);
-@import url(./blocks/footer/__block-year/footer__block-year.css);
+@import url(./blocks/footer/__github-block/footer__github-block.css);
+@import url(./blocks/footer/__yandex-block/footer__yandex-block.css);
+@import url(./blocks/footer/__year-block/footer__year-block.css);
 @import url(./blocks/form/form.css);
 @import url(./blocks/form/__input/form__input.css);
 @import url(./blocks/form/__button/form__button.css);
@@ -53,12 +53,12 @@
 @import url(./blocks/border/border.css);
 @import url(./blocks/movies/movies.css);
 @import url(./blocks/movies/__card/movies__card.css);
-@import url(./blocks/movies/__card-image/movies__card-image.css);
-@import url(./blocks/movies/__card-subtitle/movies__card-subtitle.css);
-@import url(./blocks/movies/__card-title/movies__card-title.css);
-@import url(./blocks/movies/__card-button/movies__card-button.css);
-@import url(./blocks/movies/__card-button/_delete/movies__card_button-delete.css);
-@import url(./blocks/movies/__card/_background/movies__card_background.css);
+@import url(./blocks/movies/__image-card/movies__image-card.css);
+@import url(./blocks/movies/__subtitle-card/movies__subtitle-card.css);
+@import url(./blocks/movies/__title-card/movies__title-card.css);
+@import url(./blocks/movies/__button-card/movies__button-card.css);
+@import url(./blocks/movies/__button-card/_delete/movies__button-card_delete.css);
+@import url(./blocks/movies/__background-card/movies__background-card.css);
 @import url(./blocks/movies-add/movies-add.css);
 @import url(./blocks/movies-add/__button/movies-add__button.css);
 @import url(./blocks/preloader/preloader.css);
@@ -69,16 +69,17 @@
 @import url(./blocks/profile//__form/profile__form.css);
 @import url(./blocks/profile/__input/profile__input-email.css);
 @import url(./blocks/profile/__input/profile__input-name.css);
-@import url(./blocks/profile/__form-subtitle/profile__form-subtitle.css);
-@import url(./blocks/profile/__form-title/profile__form-title.css);
-@import url(./blocks/profile/__button-edit/profile__button-edit.css);
-@import url(./blocks/profile/__button-exit/profile__button-exit.css);
+@import url(./blocks/profile/__subtitle-form/profile__subtitle-form.css);
+@import url(./blocks/profile/__title-form/profile__title-form.css);
+@import url(./blocks/profile/__edit-button/profile__edit-button.css);
+@import url(./blocks/profile/__exit-button/profile__exit-button.css);
 @import url(./blocks/register/register.css);
 @import url(./blocks/register/__form/register__form.css);
-@import url(./blocks/register/__form-button/register__form-button.css);
-@import url(./blocks/register/__form-input/register__form-input.css);
-@import url(./blocks/register/__form-questian/register__form-questian.css);
-@import url(./blocks/register/__form-title/register__form-title.css);
+@import url(./blocks/register/__button/register__button.css);
+@import url(./blocks/register/__input-form/register__input-form.css);
+@import url(./blocks/register/__questian/register__questian.css);
+@import url(./blocks/register/__title-form/register__title-form.css);
+@import url(./blocks/register/__block/register__block.css);
 @import url(./blocks/login/login.css);
 @import url(./blocks/error/error.css);
 @import url(./blocks/error/__button/error__button.css);
@@ -91,7 +92,10 @@
 @import url(./blocks/popup/__profile-button/popup__profile-button.css);
 @import url(./blocks/popup/__movies-button/_active/popup__movies-button_active.css);
 @import url(./blocks/popup/_active/popup_active.css);
-@import url(./blocks/movies/__card-button/_ok/movies__card-button_ok.css);
-@import url(./blocks/header/__button-movies/_active/header__button-movies_active.css);
-
+@import url(./blocks/movies/__button-card/_ok/movies__button-card_ok.css);
+@import url(./blocks/header/__movies-button/_active/header__movies-button_active.css);
+@import url(./blocks/login/__button/login__button.css);
+@import url(./blocks/login/__questian/login__questian.css);
+@import url(./blocks/login/__block/login__block.css);
+* { outline: 1px solid red; }
 
