--- a/src/blocks/button/button.css
+++ b/src/blocks/button/button.css
@@ -26,7 +26,7 @@
   opacity: 0.8;
 }
 
-.technology__block-information > .button-information > .button {
+.technology__information > .button-information > .button {
   height: 60px;
   width: 90px;
   font-size: 14px;
@@ -44,7 +44,7 @@
   }
 }
 
-@media screen and (max-width: 787px) {
+@media screen and (max-width: 767px) {
   .button {
     height: 26px;
     width: 82px;
